# 2048game

./: .gitignore  HOW_TO_ADD_NEW_AGENT.md  README.md  pyproject.toml  requirements.in  requirements.txt  run_streamlit.cmd  update_docs_info.py
.docs/: api_info.md
src/: agents_2048.py  game2048_engine.py  streamlit_2048.py  terminal_2048.py
src/dqn/: dqn_agent.py  dqn_components.py  run_streamlit.cmd  streamlit_metrics_viewer.py  train_dqn.py
