[project]
name = "2048game"
version = "0.1.0"
description = ""
authors = [{ name = "kolommik", email = "mikhail.kolomasov@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "attrs==25.4.0",
    "black==25.9.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "narwhals==2.10.2",
    "networkx==3.5",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "plotly==6.4.0",
    "protobuf==6.33.0",
    "pyarrow==21.0.0",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.2.0",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.28.0",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.51.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "torch==2.9.0",
    "tornado==6.5.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
